tests/ui/select_empty_fail.stderr
error: `select!` must not be empty, consider replacing with `future::pending::<()>().await` instead
 --> tests/ui/select_empty_fail.rs:6:5
  |
6 |     selectme::select! {}
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__support::select` which comes from the expansion of the macro `selectme::select` (in Nightly builds, run with -Z macro-backtrace for more info)
